// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Actions /> as delete button renders 1`] = `
<div>
  <button
    class="hover:cursor-pointer text-xl bg-deleteColor hover:bg-deleteColorHover 			hover:text-slate-200 py-3 px-10 rounded-md"
    type="button"
  >
    test
  </button>
</div>
`;

exports[`<Actions /> as link renders 1`] = `
<div>
  <a
    class="text-xl hover:underline hover:cursor-pointer"
    href="www.google.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    test
  </a>
</div>
`;

exports[`<Actions /> as submit button renders 1`] = `
<div>
  <button
    class="hover:cursor-pointer text-xl bg-medg hover:bg-lgg 			hover:text-slate-200 py-3 px-10 rounded-md"
    type="button"
  >
    test
  </button>
</div>
`;

exports[`<Actions /> as submit button renders 2`] = `
<div>
  <button
    class="hover:cursor-pointer text-xl bg-deleteColor hover:bg-deleteColorHover 			hover:text-slate-200 py-3 px-10 rounded-md"
    type="button"
  >
    test
  </button>
</div>
`;
